fix: add overflow-hidden, while opened mobile-menu

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -29,6 +29,10 @@ main {
 
 }
 
+.hidden {
+	overflow: hidden;
+}
+
 a,
 span,
 button,
